Version 0.8.9 - development
    - fixed overflow bug in qpp::powm() when numbers were very large
    - qpp::isprime() is now based on the Miller-Rabin primality test
    - qpp::rand(Type a, Type b) family of functions now throw if b > a for
        integer types or when a == b for floating-point types
    - Added new functions in <number_theory.h>:
        qpp::randprime() - random prime number generator

Version 0.8.8.2 - 3 October 2016
    - This is a bug-fix release
    - Fixed compile bug in qpp::measure_seq() due to trying to modify a const
        copy, which should have been non-const

Version 0.8.8 - 30 September 2016
    - Added OpenMP support for clang >= 3.7 in CmakeLists.txt
    - Required minimum cmake version is now 3.0
    - Added more unit testing, <number_theory.h> is now fully tested
    - Split unit testing in separate files according to the tested header file
    - Fixed typo in CMakeLists.txt which in effect disabled OpenMP
        for version 0.8.6. PLEASE use the CMakeLists.txt from current version!
    - SFINAE for all functions that have STL-containers as parameters
    - Improved performance via removing unnecessary copy, see Issue #31,
        thanks @vasekp
    - Corrected code typo in qpp::internal::Singleton<T>, see Issue #35,
        thanks @titaschanda
    - Fixed critical bug in qpp::lcm(const std::vector<bigint>&)
    - Fixed critical bug in qpp::x2contfrac()
    - Added new functions in <number_theory.h>:
        qpp::egcd()   - extended greatest common divisor algorithm
        qpp::modinv() - modular inverse of a mod p

Version 0.8.6 - 1 November 2015
    - Fixed serious bug in qpp::applyCTRL(), which was failing before for
        control gates with 2 or more controls. Added unit test in
        ./unit_tests/testing.cpp.

Version 0.8.4 - 14 October 2015
    - Added <macros.h> preprocessor debug macros header, containing:
        PRINT(x)   - std::cout << (x)
        PRINTLN(x) - std::cout << (x) << std::endl