@@ -41,11 +41,6 @@ using idx = std::size_t;
 using bigint = long long int;
 
 /**
-* \brief Non-negative big integer
-*/
-using ubigint = unsigned long long int;
-
-/**
 * \brief Complex number in double precision
 */
 using cplx = std::complex<double>;
